kubernetes/mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: mongodb
                operator: In
                values:
                - true
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          readinessProbe: # Add readinessProbe
            exec:
              command:
                - mongosh
                - -c
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe: # Add livenessProbe
            exec:
              command:
                - mongosh
                - -c
                - "db.adminCommand('ping').ok"
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
            storageClassName: slow
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
